implemented firt clean editor version

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.hoverable-rect:hover {
+    fill: rgba(0, 0, 0, 0.05);
+}
+  
+.non-interactive-path {
+    pointer-events: none;
+}
