--- a/mail/html.pug
+++ b/mail/html.pug
@@ -12,12 +12,11 @@ html(lang="en")
       .header
         h1 Tangibly
       .content
-        p Hello, #{recipientName}
-        p Thank your interest in us. In the attachments you will find the image of the
-        p design you just made. We hope you like it!
-        br
-        p Cheers,
-        p Johannes & Phillip
+        p Hey #{recipientName}
+        p Attached you'll find the image of the design you just made.
+        p We'll ping you as soons as we go live and orders are open.
+        p Until then, stay active!
+        p Johannes & Philipp
 
       .footer
         p If you have any questions, please contact us at tangibly.hsg@gmail.com
